Updated backend with new features: AI controllers, lab tests, medical records, password reset, prescriptions and vital signs